iOS: Fix Hatch button cut off behind browser toolbar
> You want the browser to dynamically adapt to the rendered space.
> To do so, you should use the `dvh` unit instead of the `vh` unit.

https://stackoverflow.com/a/75244316/25625

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ div .flexRow button, div .flexRow a {
     width: 50%;
     height: auto;
     font-size: 1.5em;
-    top: 95%;
+    bottom: 1dvh;
 }
 
 #newsHolder {
